src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BT__c</fullName>
        <label>BT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>Non-BT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Announcements</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Audience</fullName>
                </value>
                <value>
                    <fullName>Bespoke Subscribers</fullName>
                </value>
                <value>
                    <fullName>Christmas</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Consumer Advice</fullName>
                </value>
                <value>
                    <fullName>Contextual</fullName>
                </value>
                <value>
                    <fullName>Courses</fullName>
                </value>
                <value>
                    <fullName>Culture</fullName>
                </value>
                <value>
                    <fullName>Dating</fullName>
                </value>
                <value>
                    <fullName>Earth</fullName>
                </value>
                <value>
                    <fullName>E-Commerce Other</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Expat</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Drink</fullName>
                </value>
                <value>
                    <fullName>Frontpage</fullName>
                </value>
                <value>
                    <fullName>Galleries</fullName>
                </value>
                <value>
                    <fullName>Games</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Horoscopes</fullName>
                </value>
                <value>
                    <fullName>Jobs</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Motoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Per Call</fullName>
                </value>
                <value>
                    <fullName>Cost Per Click</fullName>
                </value>
                <value>
                    <fullName>Cost Per Lead</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>Impression Goal</fullName>
                    <default>true</default>
                    <label>Impression Goal</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tenancy</fullName>
                </value>
                <value>
                    <fullName>Weighted</fullName>
                </value>
                <value>
                    <fullName>Cost Per View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Price_Aegis_2011__c</fullName>
        <label>Floor Price Aegis 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_BLM_Quantum_2011__c</fullName>
        <label>Floor Price BLM Quantum 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_GroupM__c</fullName>
        <label>Floor Price GroupM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Group_M_2011__c</fullName>
        <label>Floor Price Group M 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Group_M_Motors_2011__c</fullName>
        <label>Floor Price Group M Motors 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Group_M_Tier_2__c</fullName>
        <label>Floor Price Group M Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Interpublic_U_McCann_2011__c</fullName>
        <label>Floor Price Interpublic (U McCann) 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Ogilvy_2011__c</fullName>
        <label>Floor Price Ogilvy 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Opera_2011__c</fullName>
        <label>Floor Price Opera 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Opera_General_Agency__c</fullName>
        <label>Floor Price Opera General Agency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Opera_Key_Clients__c</fullName>
        <label>Floor Price Opera Key Clients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Regional_Independents_2011__c</fullName>
        <label>Floor Price Regional Independents_2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Standard_2009__c</fullName>
        <label>Floor Price Standard 2009</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Standard_2011__c</fullName>
        <label>Floor Price Standard 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Vivaki_Starcom_2011__c</fullName>
        <label>Floor Price Vivaki (Starcom) 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Walker_2011__c</fullName>
        <label>Floor Price Walker 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Zed_2011__c</fullName>
        <label>Floor Price Zed 2011</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price_Zed__c</fullName>
        <label>Floor Price Zed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <inlineHelpText>Floor price for this product</inlineHelpText>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>Ad format (Banner, MPU, Email etc)</description>
        <inlineHelpText>Ad format (Banner, MPU, Email etc)</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Classified Select</fullName>
                </value>
                <value>
                    <fullName>CV Database</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>inRead</fullName>
                </value>
                <value>
                    <fullName>Leaderboard</fullName>
                </value>
                <value>
                    <fullName>Listing</fullName>
                </value>
                <value>
                    <fullName>Mobile Banner</fullName>
                </value>
                <value>
                    <fullName>MPU</fullName>
                </value>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overlay</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Skyscraper</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Surround Session</fullName>
                </value>
                <value>
                    <fullName>Takeover</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Where the ad product should be targeted geographically.</description>
        <inlineHelpText>Where the ad product should be targeted geographically.</inlineHelpText>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product Name ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Format__c</fullName>
        <label>Sub-format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Ad Serving</fullName>
                </value>
                <value>
                    <fullName>Ad Design &amp; Build</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Auto Overlay incl LB, MPU &amp; Halfpage</fullName>
                </value>
                <value>
                    <fullName>Auto Overlay incl LB, MPU &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Auto Overlay incl LB, MPU &amp; Sky</fullName>
                </value>
                <value>
                    <fullName>Auto Overlay incl LB &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Bookends</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB, Masthead, MPU &amp; Halfpage</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB, Masthead, MPU &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB, MPU &amp; Halfpage</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB, MPU &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB, MPU &amp; Sky</fullName>
                </value>
                <value>
                    <fullName>Bookends incl LB &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Cascade</fullName>
                </value>
                <value>
                    <fullName>Cascade &amp; Halfpage</fullName>
                </value>
                <value>
                    <fullName>Cascade &amp; MPU</fullName>
                </value>
                <value>
                    <fullName>Clock</fullName>
                </value>
                <value>
                    <fullName>Dynamic Logic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Expandable</fullName>
                </value>
                <value>
                    <fullName>Expandable Leaderboard</fullName>
                </value>
                <value>
                    <fullName>Facebook App</fullName>
                </value>
                <value>
                    <fullName>First Available Impression</fullName>
                </value>
                <value>
                    <fullName>Flipboard App</fullName>
                </value>
                <value>
                    <fullName>Halfpage</fullName>
                </value>
                <value>
                    <fullName>In Skin</fullName>
                </value>
                <value>
                    <fullName>iPad App</fullName>
                </value>
                <value>
                    <fullName>iPhone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_channel__c</fullName>
        <label>Sub-channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Aud Extension</fullName>
                </value>
                <value>
                    <fullName>AudSci Bespoke</fullName>
                </value>
                <value>
                    <fullName>AudSci Standard</fullName>
                </value>
                <value>
                    <fullName>Business Bullet</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Collectibles</fullName>
                </value>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Diary</fullName>
                </value>
                <value>
                    <fullName>Drink</fullName>
                </value>
                <value>
                    <fullName>Fantasy Football</fullName>
                </value>
                <value>
                    <fullName>Fine Arts</fullName>
                </value>
                <value>
                    <fullName>Football</fullName>
                </value>
                <value>
                    <fullName>Formula One</fullName>
                </value>
                <value>
                    <fullName>Gadget Inspectors</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Grapeshot Bespoke</fullName>
                </value>
                <value>
                    <fullName>Grapeshot Standard</fullName>
                </value>
                <value>
                    <fullName>Hilary &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Homepage</fullName>
                </value>
                <value>
                    <fullName>Horse Racing</fullName>
                </value>
                <value>
                    <fullName>Jewellery</fullName>
                </value>
                <value>
                    <fullName>Job Alerts</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Style</fullName>
                </value>
                <value>
                    <fullName>Motoring</fullName>
                </value>
                <value>
                    <fullName>News Now</fullName>
                </value>
                <value>
                    <fullName>Olympics</fullName>
                </value>
                <value>
                    <fullName>On This Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Price_GroupM__c</fullName>
        <label>Target Price GroupM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Price_Zed__c</fullName>
        <label>Target Price Zed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products</label>
    </listViews>
</CustomObject>